<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".weapon.WeaponActivity">

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/no_connection_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/no_network"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/no_connection_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_connection_image_view"
        android:layout_centerHorizontal="true"
        android:text="@string/no_connection_main"
        android:textColor="@color/blackTextColor"
        android:textSize="24dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/no_connection_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_connection_main_text"
        android:layout_centerHorizontal="true"
        android:text="@string/no_connection_description"
        android:textAlignment="center"
        android:textColor="@color/blackTextColor"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/nothing_not_found_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/nothing_not_found"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:theme="@style/CustomProgressBar"
        android:visibility="visible" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/filter_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_action_name"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>